<resources>
    <string name="Congratulate_update">Congratulations! Your Myket is updated.</string>
    <string name="English">English</string>
    <string name="Farsi">فارسی</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_text">Do you want to cancel your purchase?</string>
    <string name="about_private_mode">About private mode</string>
    <string name="access_txt_btn">Allow</string>
    <string name="account_access_level_spinner_title_everyone">Every One</string>
    <string name="account_access_level_spinner_title_followers">Followers</string>
    <string name="account_access_level_spinner_title_no_one">No One</string>
    <string name="account_bio">Biography</string>
    <string name="account_change_bio_description">Write a few sentences about yourself, other users will see this in your social media page in Myket.</string>
    <string name="account_change_nickname_description">Other users will see you with this name in the Myket.</string>
    <string name="account_change_username_description">Your chosen characters for the list name could be letters (a–z), numbers (0–9), underline (_) and dash (-).</string>
    <string name="account_gender">Gender</string>
    <string name="account_login">Login</string>
    <string name="account_massage_access_level_spinner_hint">If you change this setting, it will still be possible to continue the current conversations.</string>
    <string name="account_massage_access_level_spinner_title_everyone">Every One</string>
    <string name="account_massage_access_level_spinner_title_followers">Those you follow</string>
    <string name="account_massage_access_level_spinner_title_no_one">No One</string>
    <string name="account_state_nickname_length_error">Name Can not Be Empty.</string>
    <string name="active">Enable</string>
    <string name="active_download">%1$s of %2$s | %3$s</string>
    <string name="active_download_pending">%1$s | %2$s</string>
    <string name="active_download_stats_detail">%1$s - %2$s</string>
    <string name="active_update_desc">Do you want to enable updating this app?</string>
    <string name="ad_guard_alert_dialog">Myket\'s Ping Reduction service is currently active for you. Enabling the Ad Removal service will disconnect the current connection and activate only the new service.</string>
    <string name="ad_guard_service_is_active">Ad blocking service is active.</string>
    <string name="ad_guard_status_text">To activate, tap the Turn On button.</string>
    <string name="ad_guard_title_page">In-App Ad Blocking</string>
    <string name="add_app_action_button">Add app</string>
    <string name="add_bookmark">Add to bookmark</string>
    <string name="add_movie_action_button">Add movie</string>
    <string name="advertise_scenario_desc">Ask the receiver to tap “receive” on Share App Page on MyMarket.</string>
    <string name="advertise_time_out">No sender found. Make sure that the sender taps on the “send” button.</string>
    <string name="age_rate_string">ESRA Rating</string>
    <string name="ai_review_rate_title">Was the summary any help to you?</string>
    <string name="ai_review_tag">AI-generated sentence</string>
    <string name="ai_review_title">Review summary</string>
    <string name="alarm_title_previelage">Auto download permission</string>
    <string name="all">All</string>
    <string name="all_app_update_message">You can activate automatic download of updates via the button below.</string>
    <string name="all_apps_updated">All your apps are updated.</string>
    <string name="all_reviews">All Reviews</string>
    <string name="all_sub_review_title">Replies</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anonymous">Profile</string>
    <string name="anonymous_user">Anonymous</string>
    <string name="any_apps_title">You have not downloaded any program yet.</string>
    <string name="any_apps_txt">You can see your downloads on this page.</string>
    <string name="any_bookmark_txt">You have not bookmarked an app.</string>
    <string name="any_movie_bookmark_txt">You have not bookmarked a movie.</string>
    <string name="any_movies_title">You have not downloaded any movie yet.</string>
    <string name="any_review_title">No comments yet.</string>
    <string name="any_transaction_txt">Transactions that are paid through Myket portal can be seen on this page.</string>
    <string name="any_user_review_title">No Comments yet.</string>
    <string name="any_user_review_txt">Leave a comment and help millions of other users with their choices.</string>
    <string name="app_in_progress">Processing</string>
    <string name="app_info_view_download_count">%1$s %2$s</string>
    <string name="app_local_detail_vpn_text">Turn off your VPN to download with better speed.</string>
    <string name="app_must_installed">You should install this application, and then you can post a review for it</string>
    <string name="app_name">Myket</string>
    <string name="app_not_found">No Results!</string>
    <string name="app_not_runnable">Application is not runnable.</string>
    <string name="app_not_uninstallable">You cannot uninstall System Applications.</string>
    <string name="app_progress_failed">App processing error</string>
    <string name="app_rate_module_title">How was the app?</string>
    <string name="app_settings_failed_message">App settings is not accessible right now, please try again later</string>
    <string name="app_usage_size_last_used">%1$s (Last used: %2$s)</string>
    <string name="app_version">‎‏%1$s‎ (%2$s)</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_color">Application color</string>
    <string name="application_data">Usage Management</string>
    <string name="approve_request">Approve</string>
    <string name="apps_count">%1$s apps</string>
    <string name="apps_free_space_error">Not enough storage space</string>
    <string name="apps_name">Name</string>
    <string name="are_you_sure">are you sure?</string>
    <string name="are_you_sure_all">Do you want the selected items to be removed from the list?</string>
    <string name="are_you_sure_remove_all_apps">Do you want to remove all apps?</string>
    <string name="are_you_sure_stop_all_downloads">Do you want to stop all downloads?</string>
    <string name="are_you_sure_to_remove_follower">Are you sure you want to remove this user?</string>
    <string name="ask_exit">Press back again to exit</string>
    <string name="audio_episode_tab_item">Episode</string>
    <string name="audio_is_playing">Continue playing</string>
    <string name="audio_like_title">How was the Podcast?</string>
    <string name="audio_player_notification_channel_name">Media</string>
    <string name="audio_playing_finished_secondary_title">0 played</string>
    <string name="audio_playing_in_progress_secondary_title" formatted="false">%1$d% played</string>
    <string name="audio_review_empty_message">There are no review for this podcast yet</string>
    <string name="back">Back</string>
    <string name="backward_relation_followers">Follows you</string>
    <string name="backward_ten_second">-%1$d seconds</string>
    <string name="bazaar_domain">cafebazaar.ir</string>
    <string name="billing_permission_description">To use in app purchase service in Myket</string>
    <string name="billing_permission_label">myket in app purchase</string>
    <string name="bind_email_or_phone_empty_message">Please enter a valid Phone, i.e. 09xxxxxxxxx</string>
    <string name="bind_message_all_reviews">For writing a comment, you have to log-in first.</string>
    <string name="bind_message_bookmark">To bookmark an item, you have to login first.</string>
    <string name="bind_message_comment_phone">To submit a review, you have to login first.</string>
    <string name="bind_message_financial">Enter your mobile number for financial management.</string>
    <string name="bind_message_follow">To follow others, you have to login first.</string>
    <string name="bind_message_intent">To access to the profile, you have to login first.</string>
    <string name="bind_message_like">To like the comments, you have to login first.</string>
    <string name="bind_message_login_activity">Enter your mobile number to login.</string>
    <string name="bind_message_login_app">For App purchases, you have to login first.</string>
    <string name="bind_message_login_inapp">Enter your mobile number for purchase.</string>
    <string name="bind_message_login_mymarket">Please enter your mobile number.</string>
    <string name="bind_message_movie_comment_phone">To submit a review, you have to login first.</string>
    <string name="bind_message_mynet">To access to the Mynet, you have to login first.</string>
    <string name="birthday">Birth Date</string>
    <string name="bn_games">Games</string>
    <string name="bn_home">Home</string>
    <string name="bn_movie">Video</string>
    <string name="bn_my_update">Updates</string>
    <string name="btn_detail_app_not_found">Request this application</string>
    <string name="home_share_app_description_helper">To send an app choose “Send” and to receive an app choose “Receive”</string>
    <string name="menu_item_about">About Myket</string>
    <string name="menu_item_invite_friends">Invite Friends</string>
    <string name="menu_item_share_apps">Share Apps</string>
    <string name="more_permission">Permissions</string>
    <string name="name">Username</string>
    <string name="no_app_found_description">You can send us the name of your desired program via the button below and it will be added to Myket after review.</string>
    <string name="no_app_found_title">Application not found</string>
    <string name="permission_description_last_word">In case you changed your mind, grant this permission to Myket from Settings &gt; Application Info</string>
    <string name="share_app_permission_desc">Grant access To share the apps, give the required access to Myket:\n • Bluetooth \n • Location \n • Read external storage \n</string>
    <string name="share_app_received">Receive App</string>
    <string name="share_app_sned">Send App</string>
    <string name="share_myket_application_itself">Sharing Myket with others</string>
    <string name="text_divider">|</string>
    <string name="welcome_description">To get started, complete your account information.</string>
    <string name="welcome_picture">Picture</string>
    <string name="welcome_title">Complete your profile</string>
</resources>