<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/animated_home_selector"
        android:id="@+id/mainFeature"
        android:orderInCategory="@integer/bn_home_index"
        android:title="@string/bn_home"
        android:contentDescription="@string/bn_home"/>
    <item
        android:icon="@drawable/animated_game_selector"
        android:id="@+id/gameFeature"
        android:orderInCategory="@integer/bn_game_index"
        android:title="@string/bn_games"
        android:contentDescription="@string/bn_games"/>
    <item
        android:icon="@drawable/animated_movie_selector"
        android:id="@+id/movieHomeRoot"
        android:orderInCategory="@integer/bn_movie_index"
        android:title="@string/bn_movie"
        android:contentDescription="@string/bn_movie"/>
    <item
        android:icon="@drawable/animated_update_selector"
        android:id="@+id/rootUpdate"
        android:orderInCategory="@integer/bn_update_index"
        android:title="@string/bn_my_update"
        android:contentDescription="@string/bn_my_update"/>
</menu>
