<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_welcome_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale">
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_huge"
        android:id="@+id/title"
        android:tag="binding_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/welcome_title_margin_top"
        android:text="@string/welcome_title"
        app:bold="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_medium"
        android:id="@+id/description"
        android:tag="binding_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:text="@string/welcome_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <ir.mservices.market.views.StepView
        android:id="@+id/step_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/welcome_steps_margin_top"
        android:layout_marginStart="@dimen/horizontal_space_outer"
        app:layout_constraintEnd_toStartOf="@+id/step_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:sv_isFirst="true"
        app:sv_name="@string/name"/>
    <ir.mservices.market.views.StepView
        android:id="@+id/step_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/step_3"
        app:layout_constraintStart_toEndOf="@+id/step_1"
        app:layout_constraintTop_toTopOf="@+id/step_1"
        app:sv_name="@string/welcome_picture"/>
    <ir.mservices.market.views.StepView
        android:id="@+id/step_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/step_4"
        app:layout_constraintStart_toEndOf="@+id/step_2"
        app:layout_constraintTop_toTopOf="@+id/step_1"
        app:sv_name="@string/birthday"/>
    <ir.mservices.market.views.StepView
        android:id="@+id/step_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_space_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/step_3"
        app:layout_constraintTop_toTopOf="@+id/step_1"
        app:sv_isLast="true"
        app:sv_name="@string/account_gender"/>
    <androidx.viewpager2.widget.ViewPager2
        android:orientation="horizontal"
        android:id="@+id/view_pager"
        android:paddingTop="@dimen/space_24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_32"
        android:layoutDirection="locale"
        app:layout_constraintBottom_toTopOf="@+id/dialog_button_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="@dimen/welcome_max_shape_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="@dimen/welcome_max_shape_width"/>
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_normal"
        android:id="@+id/error"
        android:tag="binding_3"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_24"
        android:layout_marginRight="@dimen/space_24"
        android:layout_marginHorizontal="@dimen/space_24"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/dialog_button_component"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/view_pager"/>
    <ir.mservices.market.views.DialogButtonComponent
        android:id="@+id/dialog_button_component"
        android:padding="@dimen/space_16"
        android:layout_width="0dp"
        android:layout_height="@dimen/welcome_button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:layout_constraintStart_toStartOf="@+id/view_pager"
        app:layout_constraintTop_toBottomOf="@+id/view_pager"
        app:layout_constraintVertical_chainStyle="packed"/>
</androidx.constraintlayout.widget.ConstraintLayout>
