<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_not_found"
    android:tag="layout/app_not_found_0"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/bottom_navigation_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_gravity="center_horizontal"
            android:id="@+id/image"
            android:layout_width="@dimen/empty_image_size"
            android:layout_height="@dimen/empty_image_size"
            android:adjustViewBounds="true"
            app:lottie_loop="false"
            app:lottie_repeatCount="0"
            app:lottie_repeatMode="restart"/>
        <ir.mservices.market.views.MyketTextView
            android:textSize="@dimen/font_size_large"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/title"
            android:tag="binding_1"
            android:paddingLeft="@dimen/space_24"
            android:paddingRight="@dimen/space_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3xl"
            android:text="@string/no_app_found_title"
            app:bold="true"/>
        <ir.mservices.market.views.MyketTextView
            android:textSize="@dimen/font_size_medium"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/description"
            android:tag="binding_2"
            android:paddingLeft="@dimen/space_24"
            android:paddingRight="@dimen/space_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/no_app_found_description"/>
        <ir.mservices.market.views.BigFillOvalButton
            android:layout_gravity="center"
            android:id="@+id/action_button"
            android:layout_width="@dimen/empty_view_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3xl"
            app:pb_text="@string/btn_detail_app_not_found"/>
    </LinearLayout>
</FrameLayout>
