<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout"
    android:tag="layout/need_permission_to_continue_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ir.mservices.market.views.DialogArrowComponent
        android:id="@+id/arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:id="@+id/scroll_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginRight="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_16">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ir.mservices.market.views.MyketTextView
                android:textSize="@dimen/font_size_super_huge"
                android:id="@+id/title"
                android:tag="binding_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_permission"
                android:textAlignment="center"/>
            <ir.mservices.market.views.MyketTextView
                android:textSize="@dimen/font_size_large"
                android:id="@+id/description"
                android:tag="binding_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/share_app_permission_desc"
                android:textAlignment="viewStart"/>
            <ir.mservices.market.views.MyketTextView
                android:textSize="@dimen/font_size_medium"
                android:id="@+id/last_word"
                android:tag="binding_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/permission_description_last_word"
                android:textAlignment="viewStart"/>
        </LinearLayout>
    </ScrollView>
    <ir.mservices.market.views.DialogButtonComponent
        android:id="@+id/dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_16"/>
</LinearLayout>
