<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/share_app_home_layout_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/shadow"
        android:background="@drawable/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/home_share_app_image"
        android:layout_width="@dimen/empty_image_size"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_24"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/home_share_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_loop="false"
        app:lottie_repeatCount="0"
        app:lottie_repeatMode="restart"/>
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_large"
        android:id="@+id/home_share_app_title"
        android:tag="binding_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_12"
        android:text="@string/menu_item_share_apps"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/recycler_view_horizontal_padding"
        android:layout_marginEnd="@dimen/recycler_view_horizontal_padding"
        app:bold="true"
        app:layout_constraintBottom_toTopOf="@+id/home_share_app_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_share_app_image"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"/>
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_medium"
        android:id="@+id/home_share_app_description"
        android:tag="binding_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_share_app_description_helper"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/recycler_view_horizontal_padding"
        android:layout_marginEnd="@dimen/recycler_view_horizontal_padding"
        app:layout_constraintBottom_toTopOf="@+id/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_share_app_title"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"/>
    <ir.mservices.market.views.BigEmptyOvalButton
        android:id="@+id/send_button"
        android:paddingTop="@dimen/space_8"
        android:paddingBottom="@dimen/space_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        app:bold="true"
        app:layout_constraintBottom_toTopOf="@+id/recieve_button"
        app:layout_constraintEnd_toEndOf="@+id/home_share_app_image"
        app:layout_constraintStart_toStartOf="@+id/home_share_app_image"
        app:layout_constraintTop_toBottomOf="@+id/home_share_app_description"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:pb_state="button"
        app:pb_text="@string/share_app_sned"
        app:pb_textSize="@dimen/font_size_huge"/>
    <ir.mservices.market.views.BigEmptyOvalButton
        android:ellipsize="end"
        android:id="@+id/recieve_button"
        android:paddingTop="@dimen/space_8"
        android:paddingBottom="@dimen/space_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:bold="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_share_app_image"
        app:layout_constraintStart_toStartOf="@+id/home_share_app_image"
        app:layout_constraintTop_toBottomOf="@+id/send_button"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:pb_state="button"
        app:pb_text="@string/share_app_received"
        app:pb_textSize="@dimen/font_size_huge"/>
    <ir.mservices.market.views.SmallRegularTextButton
        android:id="@+id/myketTextView"
        android:tag="binding_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default_v2_triple"
        android:text="@string/share_myket_application_itself"
        android:layout_marginStart="@dimen/recycler_view_horizontal_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
