<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:tag="layout/my_market_about_0"
    android:paddingTop="@dimen/space_m"
    android:paddingBottom="@dimen/space_m"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="locale"
    android:paddingVertical="@dimen/space_m">
    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_space_inner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size"
            app:srcCompat="@drawable/app_icon_gradient"/>
        <ImageView
            android:id="@+id/logo_type"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/default_icon_size"
            android:layout_marginStart="@dimen/space_8"/>
    </LinearLayout>
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_medium"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/about"
        android:tag="binding_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_item_about"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/horizontal_space_inner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"/>
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_medium"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/divider"
        android:tag="binding_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_divider"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/space_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/about"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"/>
    <ir.mservices.market.views.MyketTextView
        android:textSize="@dimen/font_size_medium"
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/invite_friend"
        android:tag="binding_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_item_invite_friends"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/space_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
